src/snapshots/ascii_renderer__haiku_2_forest__tests__haiku_2_forest_seed42.snap
---
source: src/haiku_2_forest.rs
assertion_line: 364
expression: output
---
            · ˙          ∙                               ˇ         ˙  ·         
                                                                                
                                                                                
                                                                                
● ●       ◇◇        ● ● ●       ◇                      ▓                     │  
 ●         ◇   ◇◇◇  ●●         ◇ ◇◇        ◇◇◇         ▓                     │  
│●         │   ◇      │●●       ◇◇◇        ◇│         ▓│        ◇ │         ├│┤ 
 ╱              ◇◇                                             ◇◇               
               ◇               ◇◇ ╱                              ●  ●           
 ╱               ◇             ◇◇◇╱                            ◇ ●              
│              ◇│              ◇│◇╱            ├│┤              │● ●●           
                                                                ●●●●            
 ╱                                                               ● ●            
                                                                  ● ●           
                                                                 ●              
│                                │                               ●│             
                                                                                
                                                                                
─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒
▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒
▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─
─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒
▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒
▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─
