src/snapshots/ascii_renderer__haiku_2_forest__tests__haiku_2_forest_t5.snap
---
source: src/haiku_2_forest.rs
assertion_line: 399
expression: output
---
                                                                                
                                                                                
                                                                                
                                                                                
● ●       ◇◇        ● ● ●       ◇                      ▓                     │  
 ●         ◇   ◇◇◇  ●●         ◇ ◇◇        ◇◇◇         ▓                     │  
│●         │   ◇      │●●       ◇◇◇        ◇│         ▓│        ◇ │         ├│┤ 
 ╱              ◇◇                                             ◇◇               
               ◇               ◇◇ ╱                              ●  ●           
 ╱               ◇             ◇◇◇╱                            ◇ ●              
│              ◇│              ◇│◇╱            ├│┤              │● ●●           
                                                                ●●●●            
 ╱         ·                                                     ●˙●            
                         ∙                               ˇ        ● ●           
                                                                 ●     ·        
│               ˙                │                               ●│             
                                                                                
                                                                                
─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒
▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒
▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─
─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒
▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒
▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─▒▒─
